2004-01-31  Ken Raeburn  <raeburn@mit.edu>

	* gss-misc.c: Include sys/time.h or time.h, to get struct timeval
	declaration.

2004-01-30  Jeffrey Altman <jaltman@mit.edu>

    * gss-misc.c (read_all): Add call to select() so we don't block forever

    * gss-server.c (main): Add missing "export" parameter to second sign_server()

2003-01-08  Sam Hartman  <hartmans@mit.edu>

	* gss-misc.c (recv_token): Support reading 0 token flags as part of length

	* gss-client.c :  Support a -v1 argument meaning that no token flags are used o,

	* gss-misc.c (send_token): If token flags are null, do not send them.

2002-12-30  Ken Raeburn  <raeburn@mit.edu>

	* gss-misc.c (send_token, recv_token): Open-code the math to send
	and receive the length as four bytes in network order, rather than
	using the first four bytes of a size_t.

2002-08-29  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Revert $(S)=>/ change, for Windows support.

2002-08-23  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Change $(S)=>/ and $(U)=>.. globally.

2002-06-13  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in ($(OUTPRE)gss-server.exe, $(OUTPRE)gss-server.exe):
	Use ws2_32.lib instead of wsock32.lib.

2002-04-30  Sam Hartman  <hartmans@mit.edu>

	* gss-server.c (server_establish_context): Same here.

	* gss-client.c (client_establish_context):  delete the context
	when it is non-null, not when it is null. 

2001-12-05  Ezra Peisach  <epeisach@mit.edu>

	* gss-client.c, gss-misc.c, gss-server.c: Cast buffer length to
	int in length argument for printf.

2001-11-19  Ezra Peisach  <epeisach@mit.edu>

	* gss-server.c (server_establish_context, sign_server): Ensure
	that memory blocks are only freed once.

2001-11-07  Ezra Peisach  <epeisach@mit.edu>

	* gss-misc.c (recv_token): Do not attempt to malloc 0 bytes.

2001-11-01  Sam Hartman  <hartmans@mit.edu>

	* gss-server.c  gss-client.c:  Only free buffers returned from
	GSSAPI using  gss_release_buffer
